# SWMMCanada

./: ASSUMPTIONS.md  CITATION.cff  DATA.md  README.md  RESULTS.md
backend/: pyproject.toml
backend/scripts/: smoke_build.py
backend/swmmcanada/: pipeline.py  result_package.py
backend/swmmcanada/acquire/: climate.py  design_storm.py
backend/swmmcanada/api/: app.py  tasks.py
backend/swmmcanada/datastore/: core.py
backend/swmmcanada/export/: icm.py  mikeplus.py
backend/swmmcanada/geo/: __init__.py  crs.py
backend/swmmcanada/network/: synth.py  water.py
backend/swmmcanada/sources/: streets_osm.py  tides_chs.py
backend/swmmcanada/sources/cities/: base.py  calgary.py  kelowna.py  kitchener.py  london.py  ottawa.py  regina.py  registry.py  reykjavik.py  surrey.py  victoria.py
backend/swmmcanada/validate/: checks.py  core.py
backend/tests/: test_pipeline_select.py  test_result_package.py
backend/tests/acquire/: test_climate_gate.py  test_design_storm.py
backend/tests/api/: test_api.py
backend/tests/datastore/: test_datastore.py
backend/tests/export/: test_icm.py  test_mikeplus.py
backend/tests/fixtures/kelowna/: buildings.geojson
backend/tests/fixtures/ottawa/: buildings.geojson  combined_pipes.geojson
backend/tests/fixtures/regina/: README.md  catchbasins.geojson  outfalls.geojson  storm_pipes.geojson
backend/tests/geo/: test_crs.py
backend/tests/network/: test_delineate_dem.py  test_water.py
backend/tests/sources/: test_streets_osm.py  test_tides_chs.py
backend/tests/validate/: test_regression_baselines.py
frontend/: index.html
(+30 files in other folders)
