[project]
name = "swmmcanada"
version = "0.0.0"
description = "SWMMCanada backend — AOI → Canadian open data → SWMM model generator"
requires-python = ">=3.10"
dependencies = [
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyproj>=3.4",
  "numpy>=1.24",
  "rasterio>=1.3",
  "networkx>=3.0",
  "osmnx>=2.0",
  "pandas>=1.5",
  "requests>=2.28",
  "swmm-api>=0.4",
  "swmmio>=0.7",
  "xarray>=2024.0",
  "netcdf4>=1.6",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Default norecursedirs includes "build", which would skip our tests/build/ dir.
norecursedirs = [".*", "_darcs", "CVS", "dist", "node_modules", "venv", ".venv", "*.egg"]
# Live-network end-to-end tests are opt-in: the default run excludes them.
addopts = "-m 'not integration'"
markers = ["integration: live-network end-to-end test (run with -m integration)"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["swmmcanada*"]
